configuration/production/gateway/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: homelab-gateway
  namespace: gateway
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.patrick-evers.nl"
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard-patrick-evers-nl-tls
            namespace: gateway
      allowedRoutes:
        namespaces:
          from: All
